# django-gotenberg

./: .gitignore  TODO  manage.py  requirements.txt
.github/workflows/: python-publish.yml  test.yml
django-gotenberg/: README.rst  pyproject.toml  setup.cfg
django-gotenberg/django_gotenberg/: __init__.py  exceptions.py  render.py
django-pdf-render/: README.rst  setup.cfg
pdftemplates/: asgi.py  render.py  settings.py  urls.py  views.py  wsgi.py
pdftemplates/management/commands/: testrender.py
pdftemplates/templates/pdftemplates/: cows.html
testbed/: settings.py  urls.py  views.py
testbed/templates/: test.html
tests/: test_render.py
