[metadata]
name = django-gotenberg
version = 0.1.0
description = Render any Django template to a PDF using Gotenberg
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/kuboschek/django-pdf-render
author = Leonhard Kuboschek
author_email = leo@jacobs-alumni.de
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
    Django>=4.2
    gotenberg-client>=0.7.0
